# eternity

./: CMakeLists.txt  LICENSE  README.md  main.c  memmap_bootloader.ld.template  memmap_example.ld.template  merge_binaries.py
.github/workflows/: build.yml
protocol/: README.md  flasher.py  protocol.c  protocol.h  protocol.py  shell.py
usb/: tusb_config.h  usb_descriptors.c
